تحديث البيانات اللي ترجع نل للعمييل